crates/tmark-writers/tests/snapshots/fixtures__heading-implicit-id@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h2>Boot sequence</h2>
<p>See <a href="#boot-sequence" class="reference"></a> and <a href="#boot-sequence" class="reference">Section 1</a>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
