crates/tmark-writers/tests/snapshots/fixtures__heading-implicit-id@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== Boot sequence <boot-sequence>

See #ref(<boot-sequence>, supplement: none) and #ref(<boot-sequence>, supplement: [Section]).

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
