crates/tmark-writers/tests/snapshots/fixtures__heading-unnumbered@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h1 class="unnumbered">Preface</h1>
<h2 class="unlisted">Colophon</h2>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
