crates/tmark-writers/tests/snapshots/fixtures__heading-unnumbered@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\section*{Preface}\addcontentsline{toc}{section}{Preface}

\subsection*{Colophon}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
