crates/tmark-writers/tests/snapshots/fixtures__heading-unnumbered@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#heading(level: 1, numbering: none)[Preface]

#heading(level: 2, numbering: none, outlined: false)[Colophon]

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
