crates/tmark-writers/tests/snapshots/fixtures__html-raw@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Inline <span class="x">text</span> and <br> here.</p>
<div class="note">
Raw block.
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
