crates/tmark-writers/tests/snapshots/fixtures__html-raw@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Inline text and here.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
