crates/tmark-writers/tests/snapshots/fixtures__include-snippet-dashes@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<!-- include chapters/boot.md -->

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "chapters/boot.md",
      "node": 1
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
