crates/tmark-writers/tests/snapshots/fixtures__include-snippet-dashes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\input{chapters/boot}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "chapters/boot.md",
      "node": 1
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
