crates/tmark-writers/tests/snapshots/fixtures__include-snippet-escaped@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>---8&lt;--- “chapters/boot.md”</p>
<pre><code class="language-python">--8&lt;-- &quot;hanoi.py&quot;
</code></pre>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
